<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>
    <string name="tv_name">이름 :</string>
    <string name="tv_member">인원 :</string>
    <string name="btn_init">초기</string>
    <string name="btn_insert">입력</string>
    <string name="btn_modify">수정</string>
    <string name="btn_delete">삭제</string>
    <string name="btn_display">조회</string>
</resources>